[package]
name = "rusticata-macros"
version = "0.5.0"
description = "Helper macros for Rusticata"
license = "MIT/Apache-2.0"
keywords = ["parser","nom","serialize"]
homepage = "https://github.com/copslock/rusticata-macros"
repository = "https://github.com/copslock/rusticata-macros.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[dependencies]
nom = "4.0"
